[package]
name = "adventofcode2018"
version = "0.1.0"
authors = ["vuenc <=v.buergin@gmx.de>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
ndarray = "0.12.1"
regex = "1.1.0"
bit-vec = "0.5.0"
elapsed = "0.1"
intrusive-collections = "0.7.8"
linked-list = "0.0.3"
itertools = "0.8.0"